--- a/poketmon/src/main/resources/application.properties
+++ b/poketmon/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/poketmon_sample?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
+
+
+secret-key=123456789
