--- a/poketmon/src/main/resources/application.properties
+++ b/poketmon/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 
-secret-key=123456789
+secret-key=123456789123456789123456789123456789
