--- a/poketmon-front/package.json
+++ b/poketmon-front/package.json
@@ -9,9 +9,12 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.67",
     "@types/react": "^18.2.42",
+    "@types/react-bootstrap": "^0.32.35",
     "@types/react-dom": "^18.2.17",
     "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
