--- a/poketmon-front/package.json
+++ b/poketmon-front/package.json
@@ -8,15 +8,17 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.67",
-    "@types/react": "^18.2.42",
+    "@types/react": "^18.2.56",
     "@types/react-bootstrap": "^0.32.35",
-    "@types/react-dom": "^18.2.17",
+    "@types/react-dom": "^18.2.19",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.9.2",
+    "react-bootstrap": "^2.10.1",
+    "react-cookie": "^7.0.2",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
